<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_bottom_corners">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_grey"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/grey"
            android:layout_marginEnd="16dp"
            android:background="@color/light_grey"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey"
            android:enabled="false"
            android:textSize="16sp"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_weight="5"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>