<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourActivity">

    <com.example.gpstracker.ui.track.screens.customview.StatefulCircleView
        android:id="@+id/statefulCircleView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginBottom="48dp"
    />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"
        android:text="Start"
        android:background="@drawable/button_with_dynamic_border"
        android:layout_gravity="bottom"
        />

    <TextView
        android:id="@+id/trackerStatusTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="46dp"
        android:text="@string/tracker_is_off" />
</FrameLayout>